Fix profile alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1707,14 +1707,14 @@
 		}
 
 		.image.avatar48 {
-			width: 133.333333333333333333px;
-			height: 200px;
+			width: 66.6666666666666666666px;
+			height: 50;
 			background: #f00;
 		}
 
 			.image.avatar48 img {
-			width: 133.333333333333333333px;
-			height: 200px;
+			width: 66.6666666666666666666px;
+			height: 50;
 			}
 
 		.image.fit {
